# matchmaker

./: .gitignore  342839495328137216.db  825900837083676732.db  CustomTrueSkill.py  Dockerfile  README.md  backend.py  config.py  main.py  match.py  matchmaker_cog.py  pyproject.toml  requirements.txt  test_cog.py  valorant_cog.py
.github/workflows/: codeql-analysis.yml  docker-image.yml
cogs/: matchmaker.py  test.py
